# Proiect-OOP

./: CMakeLists.txt  README.md  angajat.cpp  angajat.h  briosa.cpp  briosa.h  builder_prajitura.h  cofetar.cpp  cofetar.h  comanda.cpp  comanda.h  curier.cpp  curier.h  exceptii.cpp  exceptii.h  factory_briose.h  main.cpp  prajitura.cpp  prajitura.h  pretBucataBriosa.cpp  pretBucataBriosa.h  pretBucataTort.cpp  pretBucataTort.h  template.cpp  template.h  tort.cpp  tort.h
