cmake_minimum_required(VERSION 3.20)
project(Proiect_OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Proiect_OOP main.cpp prajitura.cpp prajitura.h angajat.cpp angajat.h comanda.cpp comanda.h briosa.cpp briosa.h cofetar.cpp cofetar.h curier.cpp curier.h exceptii.cpp exceptii.h pretBucataBriosa.cpp pretBucataBriosa.h pretBucataTort.cpp pretBucataTort.h tort.cpp tort.h template.h builder_prajitura.h factory_briose.h)
